--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <link rel="stylesheet" type="text/css" href="./static/icon/iconfont.css">
     <title>Simon Zhang</title>
-    <link rel="icon" href="./static/avatar.ico" type="image/x-icon"/>  
+    <link rel="icon" href="./static/avatar.ico" type="image/x-icon"/>
   </head>
   <body>
     <div id="app"></div>
